--- a/synchronized/pubspec.yaml
+++ b/synchronized/pubspec.yaml
@@ -4,7 +4,8 @@ version: 2.2.0+1
 homepage: https://github.com/tekartik/synchronized.dart/tree/master/synchronized
 
 environment:
-  sdk: '>=2.8.0 <3.0.0'
+  sdk: ">=2.9.0-20.0.dev <3.0.0"
+#  sdk: '>=2.8.0 <3.0.0'
 
 dev_dependencies:
   pedantic: '>=1.9.0 <3.0.0'
